--- a/package.json
+++ b/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "-": "^0.0.1",
     "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "nanoid": "^3.1.20",
+    "npm": "^7.6.2",
+    "request": "^2.88.2",
     "swagger-ui-express": "^4.1.6"
   }
 }
