--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "mysql": "^2.18.1",
     "nanoid": "^3.1.20",
     "npm": "^7.6.2",
+    "redis": "^3.0.2",
     "request": "^2.88.2",
     "swagger-ui-express": "^4.1.6"
   }
